--- a/README
+++ b/README
@@ -3,19 +3,25 @@ fork of Jeff Garzik's reference cpuminer.
 
 License: GPLv2.  See COPYING for details.
 
-Downloads:  https://sourceforge.net/projects/cpuminer/files/
-Git tree:   https://github.com/pooler/cpuminer
+This hodlminer version is based on wolf's hodlminer and optimized by optiminer.
 
 Dependencies:
 	libcurl			http://curl.haxx.se/libcurl/
 	jansson			http://www.digip.org/jansson/
 		(jansson is included in-tree)
 
-Basic *nix build instructions:
-	./autogen.sh	# only needed if building from git repo
-	./nomacro.pl	# only needed if building on Mac OS X or with Clang
-	./configure CFLAGS="-O3"
+Ubuntu and Debian build instructions:
+	sudo apt-get install git git-core
+	sudo apt-get install build-essential pkg-config libcurl4-openssl-dev libssl-dev
+	sudo apt-get install automake
+	git clone https://github.com/Optiminer/hodlminer-wolf
+	cd hodlminer-wolf
+	./autogen.sh
+	./configure CFLAGS="-O3 -march=native"
 	make
+
+
+-----------------------------------------------------------------------
 
 Notes for AIX users:
 	* To build a 64-bit binary, export OBJECT_MODE=64
